feat(athena): Portfolio Pulse - sentiment across holdings
- Add /api/athena/portfolio-sentiment endpoint
  - GET for quick lookup (symbols only)
  - POST for weighted analysis (with values)
  - Generates proactive alerts

- Add PortfolioSentiment.tsx component
  - Full and compact views
  - Real-time sentiment for each holding
  - Twitter/Reddit mention counts
  - Trending indicators
  - Proactive alerts section
  - Auto-refresh every 5 min

Alerts generated:
- Bearish holdings in significant positions
- Portfolio-wide sentiment warnings
- Tax harvest opportunities when sentiment is bearish
- Trending holdings notifications

Ready to wire into demo dashboard.

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -352,3 +352,64 @@ PRECOG_API_KEY=""        # https://precog.finance/docs
 - Chutes balance: ~$98
 - Estimated cost per sentiment query: ~$0.002-0.004
 
+
+---
+
+## 7:45 PM - Athena Intelligence Layer (`53ed8ab`)
+
+**Sam's vision crystallized:** Oracle = Athena. Every surface enriched with real-time intelligence.
+
+**Built `intelligence.ts` — the unified brain:**
+
+```typescript
+// Detect symbols in any text
+extractSymbols("what about NVDA?") → ['NVDA']
+
+// Enrich queries with real-time data
+enrichWithIntelligence(query) → {
+  sentiment: Map<symbol, {direction, score, confidence}>,
+  tradingSignals: Map<symbol, {direction, confidence}>,
+  forecasts: Map<symbol, {direction, targetPrice}>
+}
+
+// Format for Claude injection
+formatIntelligenceForPrompt(context) → "## REAL-TIME MARKET INTELLIGENCE..."
+```
+
+**Oracle chat now auto-enriches:**
+1. Detects stock/crypto mentions in query
+2. Fetches sentiment in parallel
+3. Injects into Claude's context
+4. Claude responds with real-time data baked in
+
+**Stock research API now returns:**
+```json
+{
+  ...existingData,
+  "socialSentiment": {
+    "sentiment": "bullish",
+    "score": 0.45,
+    "twitterMentions": 4500,
+    "redditMentions": 1200,
+    "trending": true
+  }
+}
+```
+
+**Roadmap for Athena enrichment:**
+| Surface | Status |
+|---------|--------|
+| Oracle Chat | ✅ Done |
+| Stock Research | ✅ Done |
+| Portfolio Dashboard | Next |
+| Meeting Prep | Next |
+| Daily Pulse | Next |
+| What-If Scenarios | Planned |
+| Fragility Index | Planned |
+| Client Portal | Planned |
+
+**Key insight from Sam:**
+"Oracle is everything we're combining in Athena. Think ahead, be proactive and creative."
+
+This is the moat. Not just "Claude answers questions" — Maven Oracle knows what the market thinks RIGHT NOW.
+
