feat(athena): Signal Consensus View - all signals in one place
The advisor's full-picture tool for any symbol.

Components:
- SignalConsensus.tsx: Full UI component showing:
  - Overall direction (bullish/bearish/neutral) with score
  - Confidence gauge
  - Agreement level indicator
  - All contributing sources with individual signals
  - Source disagreement warnings
  - Proactive alerts
  - Analysis reasoning
  - Provider status

Page route:
- /signal-consensus/[symbol] for dedicated view
- Can also be embedded as modal/drawer anywhere

Visual features:
- Score bar showing position on bearish-neutral-bullish spectrum
- Color-coded source cards by direction
- Severity-coded disagreement alerts
- Provider status indicators

This is the advisor view - shows everything Athena knows.

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -482,3 +482,108 @@ Sam pushed me to think deeper. Here's what Athena's combined intelligence enable
 
 This is the moat. Every surface gets smarter.
 
+
+---
+
+## 7:55 PM - Synthesis Engine Complete (`60bdfd5`)
+
+**The brain of Athena is built.**
+
+### What It Does
+
+Takes raw signals from multiple sources and produces:
+
+```typescript
+synthesize({
+  symbol: 'NVDA',
+  signals: [
+    { sourceId: 'xai', value: 0.45, confidence: 0.8, ... },
+    { sourceId: 'desearch', value: 0.32, confidence: 0.7, ... },
+    { sourceId: 'vanta', value: 0.6, confidence: 0.75, ... },
+  ]
+}) → {
+  direction: 'bullish',
+  score: 0.42,           // Weighted consensus
+  confidence: 0.72,      // How sure we are
+  agreement: {
+    level: 'strong',
+    score: 0.85,
+    description: 'Strong consensus: 3 sources agree on bullish outlook'
+  },
+  sources: [...],        // Each source's contribution
+  disagreements: [],     // None - all agree
+  reasoning: [
+    'Overall assessment is moderately bullish (score: 0.42)',
+    'Based on 3 sources: 2 sentiment, 1 trading',
+    'Strong consensus: 3 sources agree on bullish outlook'
+  ],
+  alerts: [
+    { type: 'strong_signal', message: 'NVDA showing strong bullish signal' }
+  ]
+}
+```
+
+### Key Features
+
+1. **Signal Normalization**
+   - Sentiment: already -1 to +1
+   - Trading (LONG/SHORT): → -1 to +1
+   - Forecast (up/down): → -1 to +1
+
+2. **Weighted Consensus**
+   - xAI: 0.30 (first-party Twitter)
+   - Vanta: 0.25 (trading signals)
+   - Desearch: 0.20 (validation)
+   - Precog: 0.15 (BTC forecasts)
+   - Analyst: 0.10 (traditional)
+
+3. **Agreement Detection**
+   - Strong: all sources same direction
+   - Moderate: most agree
+   - Weak: significant variance
+   - Conflicting: bullish vs bearish split
+
+4. **Disagreement Detection**
+   - Flags when sources significantly differ
+   - Severity: minor/significant/major
+   - Opposite directions = always major
+
+5. **Confidence Scoring**
+   - More sources = higher confidence
+   - Higher agreement = higher confidence
+   - Stronger signal = higher confidence
+
+### New Endpoint
+
+```
+GET /api/athena/synthesize?symbol=NVDA
+GET /api/athena/synthesize?symbols=NVDA,AAPL,BTC
+GET /api/athena/synthesize?symbol=BTC&format=text
+```
+
+### Athena Architecture Now
+
+```
+Raw Data Layer
+├── xAI (Twitter)
+├── Desearch (Reddit)
+├── Vanta (Trading)
+├── Precog (Forecasts)
+└── FMP (Analyst)
+        ↓
+   Normalization
+        ↓
+   Synthesis Engine ← THE BRAIN
+   ├── Weighted Consensus
+   ├── Agreement Analysis
+   ├── Disagreement Detection
+   ├── Confidence Scoring
+   └── Alert Generation
+        ↓
+   Unified Intelligence
+        ↓
+   Every Maven Surface
+```
+
+This is the moat. The synthesis engine is what makes Athena intelligent, not just an API aggregator.
+
