feat(athena): Divergence Scanner - find social vs analyst disagreements
New tool that compares Twitter/Reddit sentiment against Wall Street analyst
consensus to find divergences:

API:
- GET/POST /api/athena/divergence - scan symbols for divergences
- Supports portfolio weighting when holdings provided
- Returns major/moderate/minor severity ratings

Component:
- DivergenceScanner.tsx with full/compact views
- Visual bar showing social vs analyst positions
- Expandable cards with hypothesis generation
- Auto-refresh support

Advisor Page:
- /partners/analysis/divergence - full divergence scanner UI
- Client portfolio selection
- Preset watchlists (Mag 7, AI Stocks, Crypto Miners, Financials)
- Custom symbol input

Also fixed:
- Added xai to DATA_SOURCES and SOURCE_WEIGHTS
- Fixed isDesearchConfigured import
- Fixed TypeScript implicit any

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -587,3 +587,66 @@ Raw Data Layer
 
 This is the moat. The synthesis engine is what makes Athena intelligent, not just an API aggregator.
 
+
+---
+
+## 8:00 PM - Signal Consensus View (`33d7b93`)
+
+**The advisor's full-picture tool is built.**
+
+### What It Shows
+
+```
+┌─────────────────────────────────────────────────────┐
+│  🧠 NVDA Signal Consensus              [Refresh]    │
+├─────────────────────────────────────────────────────┤
+│                                                     │
+│   [🟢]  BULLISH                                     │
+│         Score: +0.42                                │
+│                                                     │
+│   Confidence: 72%  │  Agreement: STRONG             │
+│   ████████████░░░  │  ████████████████░░           │
+│                                                     │
+│   ◄─────────────●───────────────────────────►      │
+│   Bearish      Neutral              Bullish         │
+│                                                     │
+├─────────────────────────────────────────────────────┤
+│  CONTRIBUTING SOURCES (3)                           │
+│                                                     │
+│  ┌─────────────┐ ┌─────────────┐ ┌─────────────┐   │
+│  │ Twitter(xAI)│ │ Reddit     │ │ Vanta       │   │
+│  │ 🟢 +0.45    │ │ 🟢 +0.32   │ │ 🟢 +0.60    │   │
+│  │ Weight: 30% │ │ Weight: 20%│ │ Weight: 25% │   │
+│  └─────────────┘ └─────────────┘ └─────────────┘   │
+│                                                     │
+├─────────────────────────────────────────────────────┤
+│  ⚡ ALERTS                                          │
+│  • Strong bullish signal across sources             │
+│                                                     │
+├─────────────────────────────────────────────────────┤
+│  🧠 REASONING                                       │
+│  ✓ Overall assessment is moderately bullish        │
+│  ✓ Based on 3 sources: 2 sentiment, 1 trading      │
+│  ✓ Strong consensus: all sources agree             │
+│                                                     │
+└─────────────────────────────────────────────────────┘
+```
+
+### Routes
+
+- `/signal-consensus/NVDA` - Full page view
+- `<SignalConsensus symbol="NVDA" />` - Embeddable component
+
+### Features
+
+- Direction with score bar visualization
+- Confidence gauge
+- Agreement level indicator
+- Individual source cards with signals
+- Disagreement warnings (when sources conflict)
+- Proactive alerts
+- Analysis reasoning
+- Provider status indicators
+
+This is the **advisor view** — shows everything Athena knows about a symbol.
+
