feat(athena): Orchestrator - the brain that coordinates all providers
The actual hybrid intelligence pipeline is now wired:

Flow:
1. Query arrives
2. Groq classifies instantly (~10-50ms)
3. Router determines path (speed/cost/deep)
4. Parallel fetch: LLM (Groq/Chutes) + Sentiment (xAI) + Signals (Vanta)
5. Synthesis engine combines all sources
6. Returns unified response with real-time signals

New files:
- orchestrator.ts - The main brain coordinating everything
- /api/athena/orchestrate - Test endpoint for the pipeline

Updated:
- groq.ts - Added query classification with structured JSON output
- index.ts - Export orchestrator functions

Providers now connected:
- Groq: Classification + speed path
- Chutes: Cost path (95% cheaper)
- xAI: Twitter sentiment
- Vanta: Trading signals (when configured)

This is the architecture that makes Maven different - not just 'Claude with data'
but 10 brains working together, each doing what it's best at.

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -590,6 +590,66 @@ This is the moat. The synthesis engine is what makes Athena intelligent, not jus
 
 ---
 
+## 8:05 PM - Divergence Scanner Complete (`49f39bc`)
+
+**What it does:** Finds where social sentiment (Twitter, Reddit) disagrees with Wall Street analyst consensus.
+
+### Types of Divergence
+
+| Type | What It Means |
+|------|---------------|
+| Social Bullish / Analyst Bearish | Retail sees something Wall Street doesn't |
+| Social Bearish / Analyst Bullish | Institutional knowledge retail missed |
+| Aligned | Consensus view, lower edge |
+
+### API Endpoint
+
+```
+GET  /api/athena/divergence?symbols=NVDA,AAPL,TSLA
+POST /api/athena/divergence { holdings: [...with values...] }
+```
+
+**Response includes:**
+- Social sentiment score (-1 to +1)
+- Analyst consensus score (-1 to +1)
+- Divergence type, magnitude, severity
+- Hypothesis (who might be right?)
+- Portfolio-weighted impact (if holdings provided)
+
+### Component
+
+`DivergenceScanner.tsx` — Full/compact modes with:
+- Visual bar showing social (purple) vs analyst (blue) positions
+- Severity badges (⚠️ Major, 🔔 Moderate, 💡 Minor)
+- Expandable cards with detailed analysis
+- Auto-refresh support
+
+### Advisor Page
+
+`/partners/analysis/divergence` — Full scanner UI with:
+- Client portfolio selection (3 demo clients)
+- Preset watchlists (Mag 7, AI Stocks, Crypto Miners, Financials)
+- Custom symbol input
+- Portfolio summary with risk level
+
+### Also Fixed
+
+- Added `xai` to DATA_SOURCES config
+- Added `xai` to SOURCE_WEIGHTS (0.9)
+- Fixed `isDesearchConfigured` import
+- Fixed TypeScript implicit any in signals route
+
+**This completes the 6 tools vision:**
+1. ✅ Signal Consensus View
+2. ✅ **Divergence Scanner** (NEW)
+3. ✅ Portfolio Pulse
+4. ⏳ Smart Tax Harvester (sentiment + loss)
+5. ⏳ Earnings Sentiment Tracker
+6. ⏳ Sector Heatmap
+
+
+---
+
 ## 8:00 PM - Signal Consensus View (`33d7b93`)
 
 **The advisor's full-picture tool is built.**
