feat(athena): Perplexity provider - real-time research with citations
The research path is now live:

Provider:
- perplexity.ts with sonar/sonar-pro/sonar-reasoning models
- researchStock() - Company-specific research with sentiment inference
- researchMarket() - Macro/market topic research
- All responses include citations (crucial for trust/compliance)

API Endpoint:
- GET /api/athena/research?q=Your question
- GET /api/athena/research?symbol=NVDA&focus=earnings
- GET /api/athena/research?topic=Fed rate decision
- POST for more control

Orchestrator Integration:
- 'deep' path now routes to Perplexity when configured
- Falls back to Chutes reasoning if no Perplexity key
- Citations included in response

This is game-changing for advisors:
- 'What's the latest on NVDA earnings?' → Real-time, cited
- 'Recent news on Fed rate decisions?' → Sourced research
- Curate for clients, maintain compliance with citations

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -650,6 +650,104 @@ POST /api/athena/divergence { holdings: [...with values...] }
 
 ---
 
+## 8:20 PM - Athena Orchestrator Complete (`fe376f0`)
+
+**THE BRAIN IS WIRED.**
+
+Sam pushed me to remember the real vision: not just tools, but the full hybrid intelligence pipeline. Now queries actually flow through multiple providers.
+
+### The Pipeline
+
+```
+        Query Arrives
+              │
+        ┌─────▼─────┐
+        │   GROQ    │  ← Classifies in ~10-50ms
+        │  (fast)   │
+        └─────┬─────┘
+              │
+        ┌─────▼─────┐
+        │  ROUTER   │  ← Picks: speed / cost / deep
+        └─────┬─────┘
+              │
+    ┌─────────┼─────────┐
+    │         │         │
+┌───▼───┐ ┌───▼───┐ ┌───▼───┐
+│  LLM  │ │  xAI  │ │ VANTA │  ← PARALLEL FETCH
+│Groq/  │ │Twitter│ │Trading│
+│Chutes │ │       │ │Signals│
+└───┬───┘ └───┬───┘ └───┬───┘
+    │         │         │
+    └─────────┼─────────┘
+              │
+        ┌─────▼─────┐
+        │SYNTHESIS  │  ← Combines all sources
+        └─────┬─────┘
+              │
+        ┌─────▼─────┐
+        │ RESPONSE  │  ← Smarter + cheaper
+        └───────────┘
+```
+
+### New Files
+
+- `orchestrator.ts` — The main brain (~500 lines)
+- `/api/athena/orchestrate` — Test endpoint
+
+### How It Works
+
+```typescript
+const result = await orchestrate({
+  query: "Should I sell NVDA?",
+  context: { holdings: ["NVDA", "AAPL", "VTI"] }
+});
+
+// Returns:
+{
+  response: "Based on current signals...",
+  classification: { type: "trading_decision", urgency: "normal", complexity: "medium" },
+  routing: { path: "cost" },
+  providers: {
+    llm: { provider: "chutes", model: "deepseek-r1", latencyMs: 1200 },
+    sentiment: { symbols: ["NVDA"], latencyMs: 800 },
+    signals: { symbols: ["NVDA"], latencyMs: 600 }
+  },
+  synthesis: {
+    consensus: { "NVDA": { direction: "bullish", score: 0.35, confidence: 0.72 } }
+  },
+  totalLatencyMs: 1500,
+  estimatedCostUsd: 0.0002
+}
+```
+
+### Routing Paths
+
+| Path | Provider | Use Case |
+|------|----------|----------|
+| **speed** | Groq | Chat, simple lookups (<100ms) |
+| **cost** | Chutes | Portfolio analysis, trading (95% cheaper) |
+| **deep** | Chutes reasoning | Complex research |
+
+### Groq Classification
+
+Added structured JSON classification to Groq provider:
+- Determines query type (chat, trading_decision, portfolio_analysis, research, simple_lookup)
+- Sets urgency (realtime, normal, background)
+- Estimates complexity (low, medium, high)
+- Recommends data sources
+
+**This is what makes Maven different.** Not "Claude with sentiment data" but a true hybrid intelligence network:
+- Groq for speed
+- Chutes for cost
+- xAI for Twitter
+- Vanta for trading signals
+- Synthesis for consensus
+
+**The moat widens with every provider we add.**
+
+
+---
+
 ## 8:00 PM - Signal Consensus View (`33d7b93`)
 
 **The advisor's full-picture tool is built.**
