chore: trigger deploy for PERPLEXITY_API_KEY

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -748,6 +748,69 @@ Added structured JSON classification to Groq provider:
 
 ---
 
+## 8:30 PM - Perplexity Research Provider (`9d00055`)
+
+Sam's insight: "Perplexity is a game changer for advisors."
+
+**Why it matters:**
+- Real-time research, not stale data
+- **Cited sources** — crucial for compliance and trust
+- Advisors can answer "What's happening with X?" instantly
+- Curate research for clients
+
+### Provider Built
+
+`perplexity.ts`:
+```typescript
+// Quick research
+const result = await perplexityResearch("What's happening with NVDA?");
+// → { content: "...", citations: [{url, title}...], latencyMs: 2000 }
+
+// Stock-specific
+const stock = await researchStock("NVDA", { focus: "earnings" });
+// → { summary, keyPoints, sentiment, citations }
+
+// Market/macro
+const market = await researchMarket("Fed rate decision");
+// → { content, citations }
+```
+
+### API Endpoints
+
+```
+GET /api/athena/research?q=Your question
+GET /api/athena/research?symbol=NVDA&focus=earnings
+GET /api/athena/research?topic=Fed rate decision
+
+Focus options: news, earnings, analysis, general
+Recency options: hour, day, week, month
+```
+
+### Orchestrator Integration
+
+Deep/research path now routes to Perplexity:
+```
+Query classified as "research"
+→ Router picks "deep" path
+→ Perplexity fetches with citations
+→ Response includes sources
+```
+
+### Athena Provider Status
+
+| Provider | Status | Use Case |
+|----------|--------|----------|
+| **Groq** | ✅ | Classification, speed path |
+| **Chutes** | ✅ | Cost path (95% savings) |
+| **Perplexity** | ✅ NEW | Research with citations |
+| **xAI** | ✅ | Twitter sentiment |
+| **Vanta** | ⏳ | Trading signals (needs key) |
+
+**Next:** Get PERPLEXITY_API_KEY from Sam to enable in production
+
+
+---
+
 ## 8:00 PM - Signal Consensus View (`33d7b93`)
 
 **The advisor's full-picture tool is built.**
