fix(athena): Add Perplexity research + FMP analyst data to synthesis
Sam caught it - portfolio_analysis queries weren't triggering:
1. Perplexity research (news, earnings, market context)
2. FMP analyst data (ratings, price targets, earnings dates)

Now Claude synthesizes ALL of:
- Initial LLM response (Groq/Chutes)
- Perplexity research with citations
- FMP analyst data (ratings, targets, P/E, earnings)
- xAI Twitter sentiment
- Vanta trading signals (when configured)

The all-seeing eye now actually sees everything.

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -806,7 +806,89 @@ Query classified as "research"
 | **xAI** | ✅ | Twitter sentiment |
 | **Vanta** | ⏳ | Trading signals (needs key) |
 
-**Next:** Get PERPLEXITY_API_KEY from Sam to enable in production
+**Perplexity key added to Vercel ✅**
+
+
+---
+
+## 8:45 PM - Claude as Synthesis Brain (`f61cab6`)
+
+Sam's insight: "Think about how Claude could be a multiplier effect."
+
+**THE ARCHITECTURAL SHIFT:**
+
+```
+BEFORE: Claude = just another LLM option
+AFTER:  Claude = THE BRAIN that synthesizes everything
+```
+
+### New Architecture
+
+```
+┌─────────────────────────────────────────┐
+│              GATHER PHASE               │
+├─────────────────────────────────────────┤
+│  Groq      → Fast classification        │
+│  Chutes    → Initial response (cheap)   │
+│  Perplexity → Research with citations   │
+│  xAI       → Twitter sentiment          │
+│  Vanta     → Trading signals            │
+└────────────────┬────────────────────────┘
+                 │
+        ┌────────▼────────┐
+        │  CLAUDE SYNTH   │  ← THE MULTIPLIER
+        │                 │
+        │  Takes ALL      │
+        │  sources and    │
+        │  produces       │
+        │  WISDOM         │
+        └────────┬────────┘
+                 │
+        ┌────────▼────────┐
+        │    RESPONSE     │
+        └─────────────────┘
+```
+
+### Claude Synthesis Function
+
+```typescript
+const result = await claudeSynthesize({
+  query: "Should I sell NVDA?",
+  initialResponse: "...", // From Chutes
+  research: { content: "...", citations: [...] }, // From Perplexity
+  sentiment: [{ symbol: "NVDA", direction: "bullish", ... }], // From xAI
+  tradingSignals: [{ symbol: "NVDA", direction: "LONG", ... }], // From Vanta
+  context: { holdings: ["NVDA", "AAPL"], riskTolerance: "moderate" }
+});
+```
+
+**Claude's system prompt:**
+> "You are Maven Oracle's synthesis brain. Your job is to take multiple intelligence sources and produce unified, actionable wisdom for wealth management."
+
+### The Multiplier Effect
+
+| Model | Role | Cost |
+|-------|------|------|
+| Groq | Fast classification, simple chat | Free tier |
+| Chutes | Bulk analysis | 95% cheaper |
+| Perplexity | Research | ~$0.02/query |
+| xAI | Twitter sentiment | ~$0.005/query |
+| **Claude** | **SYNTHESIZES ALL OF THE ABOVE** | ~$0.01/query |
+
+Cheap models do 90% of the work. Claude does the 10% that matters most.
+
+### Provider Status
+
+| Provider | Status | Role |
+|----------|--------|------|
+| Groq | ✅ | Speed |
+| Chutes | ✅ | Cost |
+| Perplexity | ✅ | Research |
+| Claude | ✅ | **Synthesis** |
+| xAI | ✅ | Sentiment |
+| Vanta | ⏳ | Signals |
+
+**Athena is now a true hybrid intelligence network.**
 
 
 ---
