docs: Save progress and tomorrow's roadmap

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -1,7 +1,7 @@
-# 2026-02-12 Daily Log
+# 2026-02-11 Daily Log (Late Night Session)
 
 ## Summary
-Wired Athena orchestrator as the **primary path** for Oracle. Financial queries now go through the full pipeline:
+Wired Athena orchestrator as the **primary path** for Oracle. Fixed critical price hallucination bug. Financial queries now go through the full pipeline:
 `Groq classify → Perplexity research → xAI sentiment → FMP analyst → Claude synthesis`
 
 ## What Got Done
@@ -76,3 +76,94 @@ Complex queries (`trading_decision`, `research`) use full pipeline (~30s)
 
 ## Key Insight
 > Building Athena wasn't just useful - it's now the brain of Maven Oracle. Every financial query gets research, sentiment, and analyst data synthesized by Claude. This is the moat.
+
+## Critical Bug Fixed: Price Hallucinations
+**Problem:** Oracle said "CIFR is around $2/share" when real price was $16.28
+**Root Cause:** Simple queries (`simple_lookup`) only used Groq → hallucinated stale training data prices
+**Fix (commit `8ada590`):**
+1. ALWAYS fetch FMP data when symbols detected (regardless of classification)
+2. ALWAYS use Claude synthesis when we have real market data
+3. Strong prompt: "NEVER quote stock prices from memory"
+4. Claude now flags stale prices from other sources
+
+**Result:** Oracle now returns correct prices with full context
+
+---
+
+# TOMORROW'S ROADMAP (2026-02-12)
+
+## 1. Oracle Intelligence Upgrade 🧠
+Make Oracle smarter than any other LLM:
+
+### Extended Thinking / Reasoning Mode
+- [ ] Enable Claude's extended thinking for complex queries
+- [ ] Route `trading_decision` and `research` queries to thinking mode
+- [ ] Cost control: Only use reasoning when complexity warrants it
+
+### Persistent Memory (Signed-In Users)
+- [ ] Load user preferences, past conversations, stated goals
+- [ ] Remember previous advice given (don't repeat yourself)
+- [ ] Track what user learned, what they're tracking
+- [ ] "You asked about CIFR last week - here's what changed"
+
+### Personalization
+- [ ] Risk tolerance affects tone and recommendations
+- [ ] Past questions inform future responses
+- [ ] Portfolio context always available
+
+## 2. Finalize Athena Providers 🔌
+
+### MANTIS (SN123) - Price Forecasting
+- [ ] Research MANTIS API access via Request Network
+- [ ] Build provider: `providers/mantis.ts`
+- [ ] Multi-timeframe forecasts (1h, 4h, 1d, 1w)
+- [ ] Confidence intervals for predictions
+- [ ] Wire into orchestrator synthesis
+
+### Vanta (SN8) - Trading Signals
+- [ ] Check if RoundTable21 validator is back online
+- [ ] Complete registration if available
+- [ ] Wire into orchestrator (already built, just needs API key)
+
+## 3. Pantheon + Athena Multiplier Effect ⚡
+
+### The Vision
+Pantheon (build system) + Athena (runtime intelligence) = Compound advantage
+
+### Full Site Sweep
+- [ ] **Main Site** (mavenwealth.ai)
+  - Every page uses Athena for real-time data
+  - No stale prices anywhere
+  - Intelligence widgets where relevant
+
+- [ ] **Maven Partners - Advisor Dashboard**
+  - Client insights powered by Athena
+  - Meeting prep uses full research pipeline
+  - Proactive alerts from Athena signals
+
+- [ ] **Maven Partners - Client Portal**
+  - Oracle for client questions (advisor-appropriate tone)
+  - Real-time portfolio intelligence
+  - Personalized insights
+
+### Proactive Learning Loop
+- [ ] Capture every feedback point Sam gives
+- [ ] Pattern recognition: What bugs keep appearing?
+- [ ] Automated checks for those patterns
+- [ ] Never make the same category of mistake twice
+
+## 4. Sam's Feedback Integration
+
+Key learnings to systematize:
+1. **Price accuracy is non-negotiable** - Always verify with real data
+2. **Build passes ≠ working** - Actually click through
+3. **Blast radius** - When fixing a bug, find all similar issues
+4. **Quality > Speed** - Don't ship v1 when v1.1 is 30 seconds away
+
+---
+
+## Session Stats
+- Commits: 2 (`053dbdd`, `8ada590`)
+- Critical bugs fixed: 1 (price hallucination)
+- Providers working: Groq ✅, Chutes ✅, Perplexity ✅, Claude ✅, xAI ✅, FMP ✅
+- Providers pending: Vanta 🔴 (validator offline), MANTIS 🎯 (tomorrow)
