--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -1,169 +1,38 @@
-# 2026-02-11 Daily Log (Late Night Session)
+# 2026-02-12 — Daily Notes
 
-## Summary
-Wired Athena orchestrator as the **primary path** for Oracle. Fixed critical price hallucination bug. Financial queries now go through the full pipeline:
-`Groq classify → Perplexity research → xAI sentiment → FMP analyst → Claude synthesis`
+## Morning Session
 
-## What Got Done
+### OpenClaw Upgrade
+- Upgraded to Claude Opus 4.6 — caused brief outage (wasn't responding)
+- Sam noticed and restarted
 
-### Athena → Oracle Integration (Complete) ✅
-- Removed the A/B test path that only used simple Groq/Chutes
-- Financial queries now use full `orchestrate()` pipeline
-- Non-financial queries fall back to direct Claude
-- `poweredBy` now shows all providers used (e.g., `athena (claude (synthesis)+xai+perplexity)`)
-- Commit: `053dbdd`
+### Market Indices Fix (Completed)
+- Sam frustrated that index cards on landing page looked stale and weren't clickable
+- **Subagent deployed:** Clickable TradingView chart modals, all 6 indices (S&P, Dow, Nasdaq, RUT, BTC, TAO), market session badges
+- Commits: a7bedb9, f40d2cf
 
-### Verified Production is Working ✅
-Tested with "What is the current sentiment on TAO and should I add to my position?"
-- Classification: `trading_decision`
-- Providers: Claude synthesis + xAI sentiment + Perplexity research
-- Latency: ~30-34s (acceptable for depth of analysis)
-- Response quality: **Excellent** - synthesized price data, technicals, sentiment, gave clear recommendation
+### Futures Data Fix (Deployed)
+- Sam pointed out pre-market still showing stale index closes instead of live futures
+- Built: API now fetches ES=F, NQ=F, YM=F, RTY=F from Yahoo during pre-market/after-hours
+- Frontend labels them as "S&P 500 Futures" etc. with previous close reference
+- Commit: cfa01bf — awaiting Vercel deploy verification
 
-### Response Example
-The orchestrator:
-1. Identified TAO is crypto (not stock) - contextual awareness
-2. Found price discrepancies across exchanges (liquidity issue)
-3. Pulled technical indicators (25% down 7d, 49% down 30d)
-4. Got Twitter sentiment (neutral, 40% confidence)
-5. Synthesized into actionable recommendation: "DO NOT ADD TO POSITION"
+### Oracle + Athena — Next Priority
+- Sam wants Oracle to be THE feature. Extended thinking + memory + Athena multi-LLM routing
+- Key points Sam emphasized:
+  1. Extended thinking (visible reasoning chain) — the trust mechanism
+  2. Memory across sessions — feels like a real advisor relationship
+  3. Athena as multiplier — multi-LLM routing (Groq speed, Claude depth, Perplexity research, Bittensor signals)
+  4. Vanta + Bittensor subnet integration — Sam wants to finalize tonight
+- This is the next build priority after market fixes
 
-## Architecture (Final)
+### Cron Jobs Failing
+- Multiple isolated cron jobs hitting "credit balance too low" on Anthropic (claude-opus-4-5)
+- Jobs affected: data validation, auto-QA, data consistency, daily research
+- Need to either top up credits or update cron jobs to use different model
+- Haven't told Sam yet — lower priority vs. Oracle work
 
-```
-User Query
-    │
-    ▼
-Financial Query? ─────────────────────────────────────────────────►  Non-Financial
-    │ YES                                                              │
-    ▼                                                                  ▼
-┌─────────────────────────────────────────────────────────────┐  Direct Claude
-│                    ATHENA ORCHESTRATOR                        │  (with tools)
-├─────────────────────────────────────────────────────────────┤
-│ 1. Groq Classify (~10ms)                                     │
-│    └─ Determines query type: simple_lookup, trading_decision │
-│                                                               │
-│ 2. Parallel Fetch:                                            │
-│    ├─ Perplexity Research (if complex)                        │
-│    ├─ xAI Twitter Sentiment (if symbols detected)             │
-│    ├─ FMP Analyst Data (price targets, ratings)               │
-│    └─ Vanta Trading Signals (when available)                  │
-│                                                               │
-│ 3. Claude Synthesis (THE MULTIPLIER)                          │
-│    └─ Takes ALL inputs, produces wisdom                       │
-└─────────────────────────────────────────────────────────────┘
-```
-
-## Next Steps
-
-### MANTIS (SN123) - Next Provider
-Since Vanta (SN8) validator is offline, consider adding MANTIS for:
-- Multi-asset price forecasting
-- Confidence intervals
-- Multi-timeframe predictions (1h, 4h, 1d, 1w)
-
-### Latency Optimization
-- 30s is acceptable but could be better
-- Consider caching Perplexity research (most expensive call)
-- Parallel everything that can be parallelized
-
-### Simple Query Optimization
-Simple queries (`simple_lookup`) correctly use fast path (Groq only ~1.4s)
-Complex queries (`trading_decision`, `research`) use full pipeline (~30s)
-
-## Files Changed
-- `apps/dashboard/src/app/api/chat/route.ts` - Rewrote POST handler to use orchestrator
-
-## Key Insight
-> Building Athena wasn't just useful - it's now the brain of Maven Oracle. Every financial query gets research, sentiment, and analyst data synthesized by Claude. This is the moat.
-
-## Critical Bug Fixed: Price Hallucinations
-**Problem:** Oracle said "CIFR is around $2/share" when real price was $16.28
-**Root Cause:** Simple queries (`simple_lookup`) only used Groq → hallucinated stale training data prices
-**Fix (commit `8ada590`):**
-1. ALWAYS fetch FMP data when symbols detected (regardless of classification)
-2. ALWAYS use Claude synthesis when we have real market data
-3. Strong prompt: "NEVER quote stock prices from memory"
-4. Claude now flags stale prices from other sources
-
-**Result:** Oracle now returns correct prices with full context
-
----
-
-# TOMORROW'S ROADMAP (2026-02-12)
-
-## 1. Oracle Intelligence Upgrade 🧠
-Make Oracle smarter than any other LLM:
-
-### Extended Thinking / Reasoning Mode
-- [ ] Enable Claude's extended thinking for complex queries
-- [ ] Route `trading_decision` and `research` queries to thinking mode
-- [ ] Cost control: Only use reasoning when complexity warrants it
-
-### Persistent Memory (Signed-In Users)
-- [ ] Load user preferences, past conversations, stated goals
-- [ ] Remember previous advice given (don't repeat yourself)
-- [ ] Track what user learned, what they're tracking
-- [ ] "You asked about CIFR last week - here's what changed"
-
-### Personalization
-- [ ] Risk tolerance affects tone and recommendations
-- [ ] Past questions inform future responses
-- [ ] Portfolio context always available
-
-## 2. Finalize Athena Providers 🔌
-
-### MANTIS (SN123) - Price Forecasting
-- [ ] Research MANTIS API access via Request Network
-- [ ] Build provider: `providers/mantis.ts`
-- [ ] Multi-timeframe forecasts (1h, 4h, 1d, 1w)
-- [ ] Confidence intervals for predictions
-- [ ] Wire into orchestrator synthesis
-
-### Vanta (SN8) - Trading Signals
-- [ ] Check if RoundTable21 validator is back online
-- [ ] Complete registration if available
-- [ ] Wire into orchestrator (already built, just needs API key)
-
-## 3. Pantheon + Athena Multiplier Effect ⚡
-
-### The Vision
-Pantheon (build system) + Athena (runtime intelligence) = Compound advantage
-
-### Full Site Sweep
-- [ ] **Main Site** (mavenwealth.ai)
-  - Every page uses Athena for real-time data
-  - No stale prices anywhere
-  - Intelligence widgets where relevant
-
-- [ ] **Maven Partners - Advisor Dashboard**
-  - Client insights powered by Athena
-  - Meeting prep uses full research pipeline
-  - Proactive alerts from Athena signals
-
-- [ ] **Maven Partners - Client Portal**
-  - Oracle for client questions (advisor-appropriate tone)
-  - Real-time portfolio intelligence
-  - Personalized insights
-
-### Proactive Learning Loop
-- [ ] Capture every feedback point Sam gives
-- [ ] Pattern recognition: What bugs keep appearing?
-- [ ] Automated checks for those patterns
-- [ ] Never make the same category of mistake twice
-
-## 4. Sam's Feedback Integration
-
-Key learnings to systematize:
-1. **Price accuracy is non-negotiable** - Always verify with real data
-2. **Build passes ≠ working** - Actually click through
-3. **Blast radius** - When fixing a bug, find all similar issues
-4. **Quality > Speed** - Don't ship v1 when v1.1 is 30 seconds away
-
----
-
-## Session Stats
-- Commits: 2 (`053dbdd`, `8ada590`)
-- Critical bugs fixed: 1 (price hallucination)
-- Providers working: Groq ✅, Chutes ✅, Perplexity ✅, Claude ✅, xAI ✅, FMP ✅
-- Providers pending: Vanta 🔴 (validator offline), MANTIS 🎯 (tomorrow)
+### QA Sweep (8:00 AM)
+- All routes 200 ✅
+- All 6 indices showing live data ✅
+- Logged to memory/qa/2026-02-12.md
