chore: update site password

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -32,7 +32,27 @@
 - Need to either top up credits or update cron jobs to use different model
 - Haven't told Sam yet — lower priority vs. Oracle work
 
+### Password Gate (8:44 AM)
+- Sam sharing Maven with Altruist — needs access control
+- Built middleware-level password gate: **BanksNavy10**
+- Cookie-based (`maven_access` = `authenticated`), 30-day expiry
+- Covers all routes — redirects to /gate if no cookie
+- Had build issue (Suspense boundary for useSearchParams) + cookie mismatch bug — both fixed
+- Env var `SITE_PASSWORD` set on Vercel
+- Commits: 2eb61f7, 727277d
+- ✅ Verified working: POST /api/gate returns 200, unauthenticated requests redirect to /gate
+
+### Altruist Meeting Context
+- Sam shared Maven with Altruist (custody platform)
+- Meeting planned for week of 2026-02-17
+- This is why password protection was urgent
+
 ### QA Sweep (8:00 AM)
 - All routes 200 ✅
 - All 6 indices showing live data ✅
 - Logged to memory/qa/2026-02-12.md
+
+### Infra Notes
+- Brave Search hitting rate limits on free plan (research crons affected)
+- Multiple isolated cron jobs were failing on Anthropic credits — seems resolved now with Opus 4.6
+- Need to start Oracle + Athena build — Sam's main priority for today
