feat(oracle): mobile-first chat UX overhaul
- Add mobile tab bar (Chat/Insights) to replace stacked sidebar
- Hide redundant 'Maven Oracle' title section on mobile
- Compact chat header on mobile-fullscreen mode
- Horizontal scrollable pill prompts on mobile
- Sticky input with safe-area-inset-bottom support
- Full-height chat area using flex layout
- Auto-scroll during streaming messages
- Context bar compacted for mobile viewports
- Quick actions switch to chat tab when tapped from insights
- Desktop layout preserved unchanged

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -52,7 +52,14 @@
 - All 6 indices showing live data ✅
 - Logged to memory/qa/2026-02-12.md
 
+### Oracle + Athena Upgrade (Completed ~10:08 AM)
+- Extended thinking in Claude synthesis (complexity-based budgets: 4K/8K/10K tokens)
+- Streaming responses via SSE (`/api/chat/stream`)
+- Visible reasoning chain (collapsible "Show reasoning" toggle)
+- Athena provider badges (Claude, Perplexity, xAI, Groq, Vanta, FMP)
+- Commit: 15cef03
+- Sam wants to finalize Vanta + Bittensor subnet integration tonight
+
 ### Infra Notes
 - Brave Search hitting rate limits on free plan (research crons affected)
 - Multiple isolated cron jobs were failing on Anthropic credits — seems resolved now with Opus 4.6
-- Need to start Oracle + Athena build — Sam's main priority for today
