fix(research): use Yahoo for real-time prices, add TradingView charts
- Stock research API now always fetches prices from Yahoo Finance (real-time)
- FMP still used for fundamentals (analyst ratings, P/E, margins, etc.)
- changePercent now calculated correctly from Yahoo data
- New /stock-research page with:
  - TradingView Advanced Chart (RSI, MACD pre-loaded)
  - TradingView Technical Analysis widget (buy/sell signals)
  - Technical levels (support/resistance, 52-week range bar)
  - Analyst consensus and price targets
  - Full fundamentals grid
  - Bull/bear case, catalysts, risks
  - Recent news
- Mobile responsive (375px+)
- Fixes stale FMP free tier price data issue

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -60,6 +60,27 @@
 - Commit: 15cef03
 - Sam wants to finalize Vanta + Bittensor subnet integration tonight
 
+### Oracle Mobile UX Overhaul (Completed ~11:14 AM)
+- Mobile tab bar (Chat / Insights) replaces stacked sidebar
+- Full-screen chat with sticky bottom input, compact header
+- Horizontal scrollable quick-action pills
+- Auto-scroll during streaming
+- Desktop layout preserved
+- Commit: b55ffac
+
+### Portfolio Lab Demo Bug (Found by QA Sweep)
+- Portfolio Lab shows $0 in demo mode — `/api/user/profile` returns 500 for demo users
+- Demo holdings don't carry through to Portfolio Lab
+- Queued for fix — not yet addressed
+
 ### Infra Notes
 - Brave Search hitting rate limits on free plan (research crons affected)
 - Multiple isolated cron jobs were failing on Anthropic credits — seems resolved now with Opus 4.6
+
+## Oracle Mobile UX Overhaul (subagent)
+- Restructured Oracle page with mobile tab bar (Chat/Insights)
+- Mobile: hides "Maven Oracle" title, uses compact chat header, horizontal pill prompts, sticky input
+- Desktop: layout preserved unchanged
+- Added auto-scroll during streaming
+- Build passes, deployed to Vercel, verified at 375px and 1280px
+- Commit: `feat(oracle): mobile-first chat UX overhaul` (b55ffac)
