fix(demo): fix portfolio lab $0 bug — don't clear demo mode for signed-in users
The loadProfile effect was clearing demo mode when isSignedIn=true,
causing signed-in users exploring the demo to lose their demo profile
on navigation. Demo mode is an explicit user action that should be
respected regardless of auth state.

--- a/memory/qa/2026-02-12.md
+++ b/memory/qa/2026-02-12.md
@@ -21,3 +21,29 @@ Source: live | Session: pre-market
 ## Notes
 - All 6 indices now showing after market chart fix deployed this morning
 - New clickable TradingView charts verified working
+
+---
+
+## QA Sweep — 12:00 PM EST
+
+## Routes (all 200 ✅)
+All 7 routes OK (including /oracle)
+
+## Market Data (regular session, all live ✅)
+- SPX: $6,862.84 (-1.14%)
+- DJI: $49,598.12 (-1.18%)
+- COMP: $22,695.46 (-1.76%)
+- RUT: $2,623.64 (-2.09%)
+- BTC: $65,808.00 (-0.50%)
+- TAO: $149.85 (+3.58%)
+
+## Price Accuracy ✅
+- MSFT: $400.06, PrevClose: $404.37, Change: -1.07% (correct!)
+- previousClose bug fixed (was showing 3-month-old close)
+
+## Deploys Today
+- Market index charts + futures
+- Password gate (MavenAlpha1)
+- Oracle: extended thinking + streaming + provider badges
+- Oracle: mobile UX overhaul
+- Research: price fix + TradingView charts
